# BennuGD2

./: CMakeLists.txt
cmake/Modules/: FindSTEAMWORKS.cmake
core/: make-fakedl.sh
core/bgdi/: CMakeLists.txt
core/include/: fake_dl.h
modules/libmod_steam/: CMakeLists.txt  libmod_steam.cpp  libmod_steam.h  libmod_steam_exports.h
tools/moddesc/: CMakeLists.txt
